--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ tqdm
 dvc
 pandas
 numpy
+scipy
 PyYAML
+scikit-learn
+lxml
 
 ### local packages -
-# -e . # << uncomment this to install from setup.py
+-e . # << uncomment this to install from setup.py
