--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -12,9 +12,5 @@ artifacts:
   CALLBACKS_DIR: callbacks
 
 source_download_dirs:
-  - path_to_data_1
-  - path_to_data_1
-
-local_data_dirs:
-  - path_to_local_data_1
-  - path_to_local_data_2
+  data_dir: data
+  data_file: data.xml
